# roundie

./: README.md
.github/workflows/: build-sim.yml
roundie/: can_handler.h  config.h  gestures.h  roundie.ino  screen_boostgauge.h  screen_clock.h  screen_multiarc.h  screen_setup.h  unit_convert.h
sim/: Arduino.h  CMakeLists.txt  Preferences.h  config.h  lv_conf.h  main.cpp  readme.md  sim_globals.cpp
